# rshogi

./: Cargo.toml
assets/: README.md
doc/: discussion-summary.md  gpui-migration-plan.md  implementation-roadmap.md  p1-status.md  plan.md  shogiground-migration-plan.md
script/: import_assets_from_lishogi.sh
src/: main.rs
src/app/: action.rs  mod.rs  state.rs  update.rs
src/core/: game.rs
src/ui/: assets.rs  board.rs  hand.rs  mod.rs  promotion.rs
src/ui_gpui/: app.rs  assets.rs  draw.rs  frame_root.rs  interaction.rs  mod.rs  model.rs  render.rs  sound.rs  workspace.rs
