[package]
name = "rshogi"
version = "0.1.0"
edition = "2024"

[features]
default = ["ui-gpui"]
ui-egui = [
    "dep:eframe",
    "dep:egui",
    "dep:image",
    "dep:resvg",
    "dep:tiny-skia",
    "dep:usvg",
]
ui-gpui = ["dep:anyhow", "dep:gpui", "dep:gpui-component", "dep:gpui-component-assets", "dep:rust-embed", "dep:rodio"]

[dependencies]
anyhow = { version = "1", optional = true }
eframe = { version = "0.31", default-features = true, optional = true }
egui = { version = "0.31", optional = true }
gpui = { version = "0.2.2", optional = true }
gpui-component = { version = "0.5.1", optional = true }
gpui-component-assets = { version = "0.5.1", optional = true }
image = { version = "0.25", default-features = true, features = ["jpeg", "png"], optional = true }
resvg = { version = "0.45", optional = true }
rust-embed = { version = "8.11.0", optional = true }
rodio = { version = "0.21", optional = true }
shogi = "0.12"
tiny-skia = { version = "0.11", optional = true }
usvg = { version = "0.45", optional = true }
